--- a/recruit/common/header.html
+++ b/recruit/common/header.html
@@ -6,13 +6,13 @@
 			</a>
 		</h1>
 		<p id="tel">
-			<a href="tel:090-3053-0184">090-3053-0184</a>
-			<span>（AM9:00〜翌AM03:00）</span>
+			<a href="tel:090-3053-0184">090-</a>
+			<span>（13:00〜翌AM01:00）</span>
 		</p>
 
 		<p id="line">
-			<a href="http://line.me/ti/p/LIL-_8S4Qh">
-				LINE ID: missmrs
+			<a href="">
+				LINE ID: 
 			</a>
 		</p>
 
