--- a/recruit/common/footer.html
+++ b/recruit/common/footer.html
@@ -27,7 +27,7 @@
 	<!--/footermenu-->
 
 	<div id="copyright">
-		<small>Copyright&copy; <a href="http://missmrs.biz/">Miss Mrs</a> All Rights Reserved.
+		<small>Copyright&copy; <a href="http://mitsubachi.halfmoon.jp/">みつばち</a> All Rights Reserved.
 		</small>
 	</div>
 
