--- a/common/navi.html
+++ b/common/navi.html
@@ -2,7 +2,7 @@
 <header id="" class="fh5co-cover" role="banner" data-stellar-background-ratio="0.5">
 
 	<nav id="mainmenu" class="" role="">
-		<div class="shopname">Mitsunachi</div>
+		<div class="shopname">Mitsubachi</div>
 		<ul>
 			<li class="active">
 				<a href="index.php#page-top">TOP</a>
@@ -12,7 +12,7 @@
 			</li>
 
 			<li>
-				<a href="" target="_blank">
+				<a href="http://blog.livedoor.jp/honeybee0401/" target="_blank">
 				出勤情報</a>
 			</li>
 			<li>
