--- a/common/footer_menu.html
+++ b/common/footer_menu.html
@@ -1,20 +1,20 @@
 <ul class="footer_menu">
 	<li>
-		<a href="tel:">
+		<a href="tel:080-1524-6132">
 			<i class="icon-phone"></i>
 			<br>
 			電話
 		</a>
 	</li>
 	<li>
-		<a href="mailto:@docomo.ne.jp">
+		<a href="mailto:honey-bee01@docomo.ne.jp">
 			<i class="icon-mail"></i>
 			<br>
 			メール
 		</a>
 	</li>
 	<li>
-		<a href="">
+		<a href="http://line.me/ti/p/syj882TyuO">
 			<i class="icon-line"></i>
 
 			<br>
