--- a/common/sns_meta.html
+++ b/common/sns_meta.html
@@ -1,6 +1,6 @@
 <meta property="og:title" content="Mitsubachi| メンズエステ | 大阪 | 天神橋六丁目 | 扇町 " />
-<meta property="og:image" content="http://mitsubachi.halfmoon.jp/images/title.jpg" />
-<meta property="og:url" content="http://mitsubachi.halfmoon.jp/" />
+<meta property="og:image" content="http://honey-bee.skr.jp/images/title.jpg" />
+<meta property="og:url" content="http://honey-bee.skr.jp/" />
 <meta property="og:site_name" content="みつばち" />
 <meta property="og:description" content="当店Mistcubach(みつばち)は扇町.天六にある完全予約制のプライベートメンズエステです。" />
 <!--    <meta name="twitter:title" content="" />
