--- a/common/navi.html
+++ b/common/navi.html
@@ -28,7 +28,7 @@
 	</nav>
 
 	<p id="contact" >
-		<a href="tel:" class="icon-phone">
+		<a href="tel:08015246132" class="icon-phone">
 			ご予約
 		</a>
 	</p>
