--- a/common/navi.html
+++ b/common/navi.html
@@ -2,19 +2,17 @@
 <header id="" class="fh5co-cover" role="banner" data-stellar-background-ratio="0.5">
 
 	<nav id="mainmenu" class="" role="">
-		<div class="shopname">Miss.Mrs</div>
+		<div class="shopname">Mitsubachi</div>
 		<ul>
 			<li class="active">
 				<a href="index.php#page-top">TOP</a>
 			</li>
 			<li>
-				<a href="therapist.php#page-top">Missセラピスト</a>
+				<a href="therapist.php#page-top">セラピスト</a>
 			</li>
+
 			<li>
-				<a href="therapist2.php#page-top">Mrsセラピスト</a>
-			</li>
-			<li>
-				<a href="http://blog.livedoor.jp/missmrs02/" target="_blank">
+				<a href="http://blog.livedoor.jp/honeybee0401/" target="_blank">
 				出勤情報</a>
 			</li>
 			<li>
@@ -30,7 +28,7 @@
 	</nav>
 
 	<p id="contact" >
-		<a href="tel:090-3053-0184" class="icon-phone">
+		<a href="tel:08015246132" class="icon-phone">
 			ご予約
 		</a>
 	</p>
