--- a/common/sns_meta.html
+++ b/common/sns_meta.html
@@ -1,10 +1,10 @@
-<meta property="og:title" content="ミスミセス | メンズエステ | 大阪 | 天神橋六丁目 | 扇町 | 南森町 | 長堀橋" />
-<meta property="og:image" content="http://missmrs.biz/images/title.jpg" />
-<meta property="og:url" content="http://missmrs.biz/" />
-<meta property="og:site_name" content="ミスミセス" />
-<meta property="og:description" content="当店Miss.Mrs(ミスミセス)は大阪市北区は南森町.扇町.天六.ミナミ(中央区)には長堀橋にある完全予約制のプライベートメンズエステです。" />
+<meta property="og:title" content="Mitsubachi| メンズエステ | 大阪 | 天神橋六丁目 | 扇町 " />
+<meta property="og:image" content="http://honey-bee.skr.jp/images/title.jpg" />
+<meta property="og:url" content="http://honey-bee.skr.jp/" />
+<meta property="og:site_name" content="みつばち" />
+<meta property="og:description" content="当店Mistcubach(みつばち)は扇町.天六にある完全予約制のプライベートメンズエステです。" />
 <!--    <meta name="twitter:title" content="" />
     <meta name="twitter:image" content="" />
     <meta name="twitter:url" content="" />
     <meta name="twitter:card" content="" /> -->
-<meta name="google-site-verification" content="7z_2IRjGRnZejpB5qdxcC7uA_59kZZ5tkiO2b_K41GY" />
+<meta name="google-site-verification" content="LmFvVQET8TEhVyWZ0-YRsIb9Iim7z8Z-cWTwKkH0_Jo" />
