--- a/common/job_contact.html
+++ b/common/job_contact.html
@@ -1,19 +1,19 @@
 
 <ul class="job-contact">
 	<li>
-		<a href="tel:090-3053-0184">
+		<a href="tel:">
 			<i class="icon-phone"></i>
 			<p>電話</p>
 		</a>
 	</li>
 	<li>
-		<a href="mailto:missmrs@docomo.ne.jp">
+		<a href="mailto:">
 			<i class="icon-mail"></i>
 			<p>メール</p>
 		</a>
 	</li>
 	<li>
-		<a href="http://line.me/ti/p/LIL-_8S4Qh">
+		<a href="">
 			<i class="icon-line"></i>
 
 			<p>LINE</p>
