--- a/recruit/common/header.html
+++ b/recruit/common/header.html
@@ -6,13 +6,14 @@
 			</a>
 		</h1>
 		<p id="tel">
-			<a href="tel:090-3053-0184">090-3053-0184</a>
-			<span>（AM9:00〜翌AM03:00）</span>
+			<a href="tel:080-1524-6132">080-1524-6132
+			</a>
+			<span>（13:00〜翌AM01:00）</span>
 		</p>
 
 		<p id="line">
-			<a href="http://line.me/ti/p/LIL-_8S4Qh">
-				LINE ID: missmrs
+			<a href="http://line.me/ti/p/syj882TyuO">
+				LINE ID: honey-bee01
 			</a>
 		</p>
 
